--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,9 @@ nav:
 
   - 计算机语言:
       C+: "./计算机语言/C+.md"
+      C库函数: "./计算机语言/C库函数.md"
       C++: "./计算机语言/C++.md"
+      Qt: "./计算机语言/QT.md"
       Python: "./计算机语言/Python.md"
 
   - 数学类:
