--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,11 +31,15 @@ nav:
       FreeRTOS: "./操作系统/FreeRTOS.md"
       bash_shell: "./操作系统/bash_shell.md"
 
+  - 计算机组成:
+      计算机基本结构: "./计算机组成/计算机基本结构.md"
+      指令集系统结构: "./计算机组成/指令集系统结构.md"
+      输入输出结构: "./计算机组成/输入输出结构.md"
+      重要的软件部分: "./计算机组成/软件.md"
+      存储器系统: "./计算机组成/存储器系统.md"
+
   - 计算机网络:
       计算机网络: "./计算机网络/计算机网络.md"
-
-  - 计算机组成:
-      计算机组成与嵌入式系统笔记: "./计算机组成/计算机组成笔记.md"
 
   - 计算机语言:
       C+: "./计算机语言/C+.md"
