--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,6 +76,8 @@ theme:
         name: 切换至亮色模式
   loge: "images/electric_bolt.png"
   favicon: "images/catching_pokem.png"
+
+  logo: "images/catching_pokem.png"
 # 可用的主题色：
 # red, pink, purple, deep purple, indigo, blue, light blue,
 # cyan, teal, green, light green, lime, yellow, amber,
