--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,12 +18,14 @@ nav:
   - 团队开发:
       Git: "./团队开发/Git.md"
       GitHub: "./团队开发/GitHub.md"
-      md语法: "./团队开发/md语法.md"
+      # md语法: "./团队开发/md语法.md"
 
   - 嵌入式:
-      Stm32: "./嵌入式/Stm32.md"
-      通信协议: "./嵌入式/通信协议.md"
-      工具链: "./嵌入式/工具链.md"
+      Stm32:
+        Stm32: "./嵌入式/Stm32/Stm32.md"
+        通信协议: "./嵌入式/Stm32/通信协议.md"
+      工具链:
+        工具链: "./嵌入式/工具链/工具链.md"
       树莓派: "./嵌入式/树莓派.md"
 
   - 操作系统:
@@ -46,13 +48,13 @@ nav:
       C库函数: "./计算机语言/C库函数.md"
       C++: "./计算机语言/C++.md"
       Qt: "./计算机语言/QT.md"
-      Python: "./计算机语言/Python.md"
+      # Python: "./计算机语言/Python.md"
 
-  - 数学类:
-      数模:
-        第一讲:距离优略分析法: "./数学类/数模/第一讲:距离优略分析法.md"
-      Matlab语法: "./数学类/Matlab语法.md"
-      Matlab仿真: "./数学类/Matlab仿真.md"
+  # - 数学类:
+  #     数模:
+  #       第一讲:距离优略分析法: "./数学类/数模/第一讲:距离优略分析法.md"
+  #     Matlab语法: "./数学类/Matlab语法.md"
+  #     Matlab仿真: "./数学类/Matlab仿真.md"
 
 theme:
   name: material
