--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,10 @@ nav:
         Stm32: "./嵌入式/Stm32/Stm32.md"
         通信协议: "./嵌入式/Stm32/通信协议.md"
       工具链:
-        工具链: "./嵌入式/工具链/工具链.md"
+        编译器: "./嵌入式/工具链/编译器.md"
+        调试器: "./嵌入式/工具链/调试器.md"
+        构建工具: "./嵌入式/工具链/构建工具.md"
+        编辑器: "./嵌入式/工具链/编辑器.md"
       树莓派: "./嵌入式/树莓派.md"
 
   - 操作系统:
