--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,8 +22,10 @@ nav:
 
   - 嵌入式:
       Stm32:
-        Stm32: "./嵌入式/Stm32/Stm32.md"
+        Stm32概述: "./嵌入式/Stm32/Stm32概述.md"
+        重要外设: "./嵌入式/Stm32/重要外设.md"
         通信协议: "./嵌入式/Stm32/通信协议.md"
+        启动过程: "./嵌入式/Stm32/启动过程.md"
       工具链:
         编译器: "./嵌入式/工具链/编译器.md"
         调试器: "./嵌入式/工具链/调试器.md"
